Display customer address and phone to craftsman upon offer acceptance.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -696,7 +696,8 @@
       "Offers": "العروض",
       "CreatedLabel": "تم الإنشاء",
       "ExpiresLabel": "ينتهي",
-      "AddressLabel": "العنوان"
+      "AddressLabel": "العنوان",
+      "PhoneNumberLabel": "رقم الهاتف"
     },
     "Buttons": {
       "Retry": "أعد المحاولة",
