Add a completion button, enable customers to submit reviews after completion, and enable booking cancellation with date-based fees.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -369,7 +369,9 @@
         "Inactive": "غير نشط",
         "InactiveSubtitle": "غير مرئي للعملاء",
         "Reviews": "المراجعات",
-        "ReviewsSubtitle": "تعليقات العملاء"
+        "ReviewsSubtitle": "تعليقات العملاء",
+        "Balance":"الميزانية",
+        "BalanceSubtitle": "ميزانيتك"
       }
     },
     "Banner": {
@@ -768,6 +770,26 @@
       "RejectSuccess": "تم رفض العرض بنجاح.",
       "GenericError": "حدث خطأ. حاول مرة أخرى.",
       "ActionError": "تعذر تنفيذ العملية حالياً. حاول مجدداً لاحقاً."
+    },
+    "CancelBooking": {
+      "Title": "إلغاء الحجز",
+      "ModalTitle": "الاسترداد والإلغاء",
+      "ModalDescription": "قد يؤدي الإلغاء بعد قبول العرض إلى تقليل مبلغ الاسترداد حسب مدى قرب موعد الزيارة.",
+      "FeeNote": "نحتفظ برسوم بسيطة لتغطية تكاليف المعاملات والجدولة.",
+      "ReasonLabel": "السبب (اختياري)",
+      "ReasonPlaceholder": "شارك ملاحظة قصيرة حول سبب الإلغاء",
+      "CalloutTitle": "هل تحتاج إلى إلغاء هذا الحجز؟",
+      "CalloutWarning": "تعتمد المبالغ المستردة على توقيت الزيارة وقد لا تشمل رسوم المنصة.",
+      "Button": "إلغاء الحجز",
+      "Buttons": {
+        "Dismiss": "الاحتفاظ بالحجز",
+        "Confirm": "تأكيد الإلغاء",
+        "Processing": "جارٍ المعالجة…"
+      },
+      "Messages": {
+        "NoBooking": "لم نتمكن من العثور على حجز لهذا الطلب.",
+        "Success": "تم إلغاء الحجز بنجاح. سيتم معالجة المبلغ المسترد قريبًا."
+      }
     }
   },
   "ServiceRequestForm": {
