Fix critical issues across all application layers.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -230,6 +230,7 @@
       "Title": "استكشف الفرص",
       "Subtitle": "ابق على اطلاع بأحدث طلبات العملاء، وحدد المناسب منها من حيث الميزانية، وتصرف قبل انتهاء الوقت."
     },
+    "ViewDetails":"عرض التفاصيل",
     "Stats": {
       "Total": {
         "Label": "الإجمالي",
