--- a/Client/public/i18n/en.json
+++ b/Client/public/i18n/en.json
@@ -230,6 +230,7 @@
       "Title": "Browse opportunities",
       "Subtitle": "Stay on top of fresh customer requests, prioritize the ones with the right budget, and act before they expire."
     },
+    "ViewDetails":"ViewDetails",
     "Stats": {
       "Total": {
         "Label": "Total",
