Apply bug fixes across the full application stack.

--- a/Client/public/i18n/ar.json
+++ b/Client/public/i18n/ar.json
@@ -718,7 +718,7 @@
       "Title": "العروض المستلمة",
       "Count": "{{count}} عروض",
       "Estimated": "المدة المتوقعة {{minutes}} دقيقة",
-      "Availability": "متاح من {{from}} إلى {{to}}",
+      "Availability": "متاح من {{Day}} إلى {{Time}}",
       "Sent": "تم الإرسال {{value}}",
       "Status": {
         "Pending": "قيد المراجعة",
